# cpp_observer_pattern

./: README.md
include/: ObserverPattern.hpp
test/: CMakeLists.txt  DualRole.cpp  DualRole.h  ValueEntity.cpp  ValueEntity.h  ValueMonitor.cpp  ValueMonitor.h  main.cpp
